--- a/index.html
+++ b/index.html
@@ -58,23 +58,6 @@
         <p>¬ Disponibilidad inmediata y horaria.</p>
         <p>¬ Posibilidad de aportar referencias de cualquier experiencia profesional.</p>
     </div>
-
-
-    <script>
-        var coll = document.getElementsByClassName("collapsible");
-        var i;
-        
-        for (i = 0; i < coll.length; i++) {
-          coll[i].addEventListener("click", function() {
-            this.classList.toggle("active");
-            var content = this.nextElementSibling;
-            if (content.style.maxHeight){
-              content.style.maxHeight = null;
-            } else {
-              content.style.maxHeight = content.scrollHeight + "px";
-            } 
-          });
-        }
-        </script>
+        <script src="./js/collapsible.js"></script>
 </body>
 </html>
