--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <p>¬ Disponibilidad inmediata y horaria.</p>
         <p>¬ Posibilidad de aportar referencias de cualquier experiencia profesional.</p>
     </div>
+    <script src="./js/jquery-3.5.1.min.js"> </script>
         <script src="./js/collapsible.js"></script>
 </body>
 </html>
